--- a/page1/index.html
+++ b/page1/index.html
@@ -12,5 +12,18 @@
 		<p>From breathtaking landscapes to vibrant cultures, explore destinations that inspire and amaze.</p>
 		<button>Explore</button>
 	</div>
+	<div class="images-container">
+		<img src="images/1.png" alt="">
+		<img src="images/1 (1).png" alt="">
+		<img src="images/2.png" alt="">
+		<img src="images/3.png" alt="">
+		<img src="images/4.png" alt="">
+		<img src="images/Rectangle 3.png" alt="">
+		<img src="images/Rectangle 4 (1).png" alt="">
+		<img src="images/Rectangle 4.png" alt="">
+		
+
+		
+	</div>
 </body>
 </html>
