--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-    :root {
-      --bg: #0f172a;
-      --card: #1e293b;
-      --muted: #94a3b8;
-      --accent: #38bdf8;
-      --radius: 16px;
-    }
+ :root {
+  --bg: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(252, 176, 69, 1) 100%);
+  --card: #1e293b;
+  --muted: #94a3b8;
+  --accent: #38bdf8;
+  --radius: 16px;
+}
+
+
 
     * { box-sizing: border-box; }
     body {
