conneted to the main page

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   // Instead of COUNT + auto loop, define your pages here
 const pages = [
      { title: "Page 1", file: "page1/index.html", thumb: "imagess/dis.png" },
-  { title: "Landing Page 2", file: "page2.html", thumb: "thumb-2.jpg" },
+  { title: "Landing Page 2", file: "page2/index.html", thumb: "thumb-2.jpg" },
   { title: "My Cool Landing", file: "my-cool-landing.html", thumb: "thumb-cool.jpg" }
 ];
 
